# data-science

./: README.md
dutch-migration/: notebook.ipynb
eurovision/: pyproject.toml  voting_analysis.ipynb
eurovision/src/esc/: utils.py
trade-data/: api_walktrough.ipynb  data.csv
trade-data/src/pywits/: obtaining_data.py
