[tool.poetry]
name = "esc"
version = "0.0.1"
description = "Package for some simple eurovision data analysis"
authors = ["Pieter Pel <contact@pieterpel.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"